--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
   outline: none;
   box-sizing: border-box;
 }
-.body {
+.main {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
@@ -15,6 +15,7 @@
   margin: 15px;
 }
 .title {
+  margin: 15px;
   padding-bottom: 20px;
   color: rgb(85, 84, 84);
 }
